chore: fix some stuff